Make build work on modern systems.

--- a/build.properties
+++ b/build.properties
@@ -26,6 +26,8 @@ class-path = xercesImpl.jar
 build.bat = build.bat
 build.xml = build.xml
 build.properties = build.properties
+ant.build.javac.source = 1.6
+ant.build.javac.target = 1.6
 
 # files
 thesis.pdf = thesis.pdf
